# win-tools

./: README.md  index.html  package.json  vite.config.ts
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: foundation.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/disk/: disk.rs
src-tauri/src/scripts/: constants.rs  disk.rs  mod.rs  structs.rs  terminal.rs
src-tauri/src/tts/: config.rs  constants.rs  disk.rs  mod.rs  tts.rs
src-tauri/src/utils/: constants.rs  index.rs  mod.rs  structs.rs
src/components/inputs/: Button.tsx  Checkbox.tsx  FilePathButton.tsx  FolderPathButton.tsx  RangeInput.tsx
src/constants/: index.ts
src/hooks/: file.ts  local.ts
src/theme/: theme.ts
src/tools/: ScriptRunner.tsx  TextToSpeach.tsx
src/tools/ApiTester/: ApiTester.tsx  PresetManager.tsx  RequestForm.tsx
src/tools/LogMonitor/: LogMonitor.tsx
src/tools/ScriptRunner/: AddScriptModal.tsx  ScriptRunner.tsx  SelectType.tsx  Styles.tsx  constants.ts  index.ts  local.ts  types.ts
src/tools/TextToSpeecth/: Styles.tsx  TextToSpeach.tsx  index.ts  local.ts
src/utils/: file.ts  index.ts
