[package]
name = "win-tools"
version = "0.0.0"
description = "A Tauri TTS App"
authors = ["tihomir-selak"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tts_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "=2.1.0", features = [] }
tauri-cli = "=2.4.0"

[dependencies]
tauri = { version = "=2.4.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "=0.3.9", features = [
  "winuser",
  "wincon",
  "handleapi",
  "winbase",
] }
tauri-plugin-dialog = "=2.2.0"
msedge-tts = "=0.2.4"
reqwest = "0.12.12"
lazy_static = "1.4.0"
rodio = "0.17.3"
# Command line argument parsing
clap = "2.33.3"
# Add HTTP server dependencies
warp = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
